add sentry debug endpoint
